--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "nodejs-robert.github.io",
-  "version": "1.0.0",
-  "description": "node js",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Robertgaraban/nodejs-robert.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Robertgaraban/nodejs-robert.github.io/issues"
-  },
-  "homepage": "https://github.com/Robertgaraban/nodejs-robert.github.io#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "nodejs-robert.github.io",
+    "version": "1.0.0",
+    "description": "node js",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Robertgaraban/nodejs-robert.github.io.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Robertgaraban/nodejs-robert.github.io/issues"
+    },
+    "homepage": "https://github.com/Robertgaraban/nodejs-robert.github.io#readme",
+    "dependencies": {
+        "express": "^4.17.1"
+    }
 }
